--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <!--/////////// End Archive List //////////-->
 
         <!--/////////// Deals //////////-->
+        <div class="row clearfix clear">
         <section class="shadow">
           <figure>
             <img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
@@ -167,6 +168,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </section>
+      </div>
         <!--/////////// Ends Deals //////////-->
 
       </div><!-- .wrapper -->
