--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!--/////////// Ends Featured Brands //////////-->
 
         <!--/////////// Archive List //////////-->
-        <section class="shadow col-4 clearfix">
+        <section class="shadow col-4 clear">
           <div id="archive">
           <h2>Shoe Archive</h2>
           <h3><a href="#">2014</a></h3>
