--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <!--/////////// Featured Brands //////////-->
         <div class="row clearfix">
-        <section class="shadow col-8">
+        <section class="shadow col-8 clearfix">
           <figure>
             <img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
             <figcaption>royalty free image from www.sxc.hu</figcaption>
